istio-basics/Frontend-Backend-app/hello-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hello-frontend
spec:
  host: hello-frontend
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hello-backend
spec:
  host: hello-backend
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
