istio-basics/Frontend-Backend-app/hello-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
  http:
  - match:
    - uri:
        prefix: /frontend
    route:
    - destination:
        host: hello-frontend
        port:
          number: 8080
  - match:
    - uri:
        prefix: /backend
    route:
    - destination:
        host: hello-backend
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hello-frontend
        port:
          number: 8080
